--- a/t1.html
+++ b/t1.html
@@ -33,7 +33,7 @@
         <section class="about-part">
             <div class="container">
                 <div class="two-columns">
-                    <div class="col">
+                    <div class="col large-col">
                         <h2 class="style">About our casino</h2>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
                         layout. The point of using Lorem Ipsum</p>
@@ -45,12 +45,18 @@
                         </div>
                         
                     </div>
-                    <div class="col">
+                    <div class="col small-col">
                         <div class="image-wrap">
                             <div class="bg-stretch" style="background-image: url('./casino/about-img1.jpg');"></div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="products-part">
+            <div class="container lg">
+                <h2 class="style">all games here</h2>
+                <p>established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
             </div>
         </section>
 
