--- a/t1.html
+++ b/t1.html
@@ -57,6 +57,20 @@
             <div class="container lg">
                 <h2 class="style">all games here</h2>
                 <p>established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
+                <div class="four-columns">
+                    <div class="col">
+                        <div class="product-detail">
+                            <div class="product-image">
+                                <div class="bg-stretch" style="background-image: url('./casino/product-img1.jpg');"></div>
+                            </div>
+                            <div class="product-content">
+                                <div class="product-code">01</div>
+                                <h3>Game</h3>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
