--- a/t1.html
+++ b/t1.html
@@ -69,6 +69,54 @@
                                 <p>There are many variations of passages of Lorem Ipsum available, but the</p>
                             </div>
                         </div>
+                        <div class="button-wrap">
+                            <a href="#" class="btn secondary">Play Now</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product-detail">
+                            <div class="product-image">
+                                <div class="bg-stretch" style="background-image: url('./casino/product-img1.jpg');"></div>
+                            </div>
+                            <div class="product-content">
+                                <div class="product-code">02</div>
+                                <h3>Game</h3>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the</p>
+                            </div>
+                        </div>
+                        <div class="button-wrap">
+                            <a href="#" class="btn primary">Play Now</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product-detail">
+                            <div class="product-image">
+                                <div class="bg-stretch" style="background-image: url('./casino/product-img1.jpg');"></div>
+                            </div>
+                            <div class="product-content">
+                                <div class="product-code">03</div>
+                                <h3>Game</h3>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the</p>
+                            </div>
+                        </div>
+                        <div class="button-wrap">
+                            <a href="#" class="btn primary">Play Now</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product-detail">
+                            <div class="product-image">
+                                <div class="bg-stretch" style="background-image: url('./casino/product-img1.jpg');"></div>
+                            </div>
+                            <div class="product-content">
+                                <div class="product-code">04</div>
+                                <h3>Game</h3>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the</p>
+                            </div>
+                        </div>
+                        <div class="button-wrap">
+                            <a href="#" class="btn primary">Play Now</a>
+                        </div>
                     </div>
                 </div>
             </div>
